--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
 @import "tailwindcss";
 @plugin "daisyui";
 
+a.active {
+  text-decoration: underline;
+}
+a.pending {
+  text-decoration: none;
+}
